--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
+    "@prisma/client": "^5.14.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.41.1",
     "axios": "^1.6.8",
@@ -46,6 +47,7 @@
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
     "postcss": "^8.4.38",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
