--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "form-data": "^4.0.0",
     "mailgun.js": "^9.4.1",
     "next": "^14.1.4",
+    "next-auth": "^4.24.7",
     "next-plausible": "^3.12.0",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
@@ -40,6 +41,7 @@
     "@types/jest": "^29.5.12",
     "@types/mdx": "^2.0.12",
     "@types/mongoose": "^5.11.97",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20.12.2",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
