--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/mdx": "^13.5.6",
     "@prisma/client": "^5.14.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
