added layout.tsx to track-score folder to indicate that it is a private page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "app/api/auth/[...nextauth]"  ],
   "exclude": [
     "node_modules"
   ]
